k8s/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector: 
    k8s-app: grafana
  type: NodePort  
  ports:
    - port: 3000
      targetPort: 3000 
      nodePort: 32500
